--- a/Day1-html-css/quiz.html
+++ b/Day1-html-css/quiz.html
@@ -57,6 +57,7 @@
     <div class="quiz_container">
       <div class="question">
         <!-- p태그를 이용하여 첫 번째 문제를 내주세요 -->
+        <p>1. 나의 프로필 사진은?</p>
       </div>
       <div class="option">
         <div id="answer_option">
@@ -65,18 +66,23 @@
               <img id="profile" src="profile.jpg" width="10%">
               <div id="q1_radio">
                 <!-- input 타입 중 radio를 이용하여 보기1을 만들어주세요 -->
+                <input type="radio" name="num1">선글라스 낀 사진
               </div>
           </div>
           <div id="q1_answer">
               <!-- 이미지 넣기를 이용하여 보기 이미지2를 넣어주세요 (id는 "profile") -->
+              <img id="profile" src="profile2.jpg" width="10%">
               <div id="q1_radio">
                 <!-- input 타입 중 radio를 이용하여 보기2를 만들어주세요 -->
+                <input type="radio" name="num1">눈 감은 사진
               </div>
           </div>
           <div id="q1_answer">
               <!-- 이미지 넣기를 이용하여 보기 이미지3을 넣어주세요 (id는 "profile") -->
+              <img id="profile" src="profile3.jpg" width="10%">
               <div id="q1_radio">
                 <!-- input 타입 중 radio를 이용하여 보기3을 만들어주세요 -->
+                <input type="radio" name="num1">눈 뜬 사진
               </div>
           </div>
         </div>
@@ -87,6 +93,7 @@
         <div class="answer_container">
           <p class="answer_is"><strong>정답은 바로!!</strong></p>
           <!-- p태그를 이용하여 첫 번째 문제의 정답을 써주세요 -->
+          <p>눈 감은 사진</p>
         </div>
       </div>
     </div>
@@ -97,9 +104,11 @@
     <div class="quiz_container">
       <div class="question">
         <!-- p태그를 이용하여 두 번째 문제를 내주세요 -->
+        <p>2. 내가 좋아하는 음식은?</p>
       </div>
       <div class="option">
         <!-- input 타입 중 text를 이용하여 입력창을 만들어주세요 (placeholder 사용해보기) -->
+        <input type="text" placeholder="힌트: 세글자">
       </div>
 
       <div class="answer">
@@ -107,6 +116,7 @@
         <div class="answer_container">
           <p class="answer_is"><strong>정답은 바로!!</strong></p>
           <!-- p태그를 이용하여 두 번째 문제의 정답을 써주세요 -->
+          <p>파스타</p>
         </div>
       </div>
     </div>
@@ -117,9 +127,15 @@
     <div class="quiz_container">
       <div class="question">
         <!-- p태그를 이용하여 세 번째 문제를 내주세요 -->
+        <p>3. 나에 대한 설명으로 알맞은 것은?</p>
       </div>
       <div class="option">
         <!-- input 타입 중 checkbox를 이용하여 3개 이상의 보기를 만들어주세요 -->
+        <input type="checkbox" name="num1">좋아하는 과목은 수학이다<br>
+        <input type="checkbox" name="num1">취미는 노래 부르기이다<br>
+        <input type="checkbox" name="num1">좋아하는 가수는 폴킴이다<br>
+        <input type="checkbox" name="num1">즐겨하는 게임은 롤이다<br>
+        <input type="checkbox" name="num1">하고 싶은 일은 잠자기이다
       </div>
 
       <div class="answer">
@@ -127,6 +143,7 @@
         <div class="answer_container">
           <p class="answer_is"><strong>정답은 바로!!</strong></p>
           <!-- p태그를 이용하여 세 번째 문제의 정답을 써주세요 -->
+          <p>'즐겨하는 게임은 롤이다'와 '하고 싶은 일은 잠자기이다'</p>
         </div>
       </div>
     </div>
